--- a/fotos.html
+++ b/fotos.html
@@ -1,34 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>noticias cidade - seu site de noticias</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="fotos">
-    <div id="container">
-        <div id="topo">
-            <h1 class="logo">Noticias cidade</h1>
-            <ul id="navegacao">
-               <li class="primeiro" ><a  id="home" href="index.html">home</a></li>
+<html>
+	<head>
+		<title>Notícias cidade - Seu site de notícias</title>
+		<meta charset="utf-8">
 
-               <li><a id="brasil" href="brasil.html">brasil</a></li>
+		<!-- Estilo customizado -->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 
-               <li><a id="internacional" href="internacional.html">internacional</a></li>
+	</head>
 
-               <li><a id="economia" href="economia.html">economia</a></li>
+	<body id="uma-coluna" class="fotos">
 
-               <li><a id="saude" href="saude.html">saúde</a></li>
+		<!-- Início container -->
+		<div id="container">
 
-               <li><a  id="ciencia" href="ciencia.html">ciência</a></li> 
+			<!-- Início topo -->
+			<div id="topo">
+				<h1 class="logo">Notícias cidade</h1>
+				<ul id="navegacao">
+					<li class="primeiro">
+						<a id="home" href="index.html">home</a>
+					</li>
+					<li>
+						<a id="brasil" href="brasil.html">Brasil</a>
+					</li>
+					<li>
+						<a id="internacional" href="internacional.html">Internacional</a>
+					</li>
+					<li>
+						<a id="economia" href="economia.html">Economia</a>
+					</li>
+					<li>
+						<a id="saude" href="saude.html">Saúde</a>
+					</li>
+					<li>
+						<a id="ciencia" href="ciencia.html">Ciência</a>
+					</li>
+					<li>
+						<a id="fotos" href="fotos.html">Fotos</a>
+					</li>
+				</ul>
+			</div><!-- fim /topo -->
 
-               <li><a id="fotos"  href="fotos.html">fotos</a></li>  
-            </ul>
-        </div>
-    </div>
+			<!-- Início conteudo -->
+			<div id="conteudo">
 
-   
-</body>
+				<div id="primario">
+					
+					<div class="caixa destaque">
+						<h2>Destaque</h2>
+						<div class="caixa-conteudo">
+
+							<h3>Nova legislação</h3>
+							<img class="imagem-principal" src="imagens/taxi.jpg" width="100%">
+							<p>
+								Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+							</p>
+							<a href="">Leia mais!</a>
+
+						</div>
+					</div>
+
+					<div class="caixa">
+						<h2>Mundo</h2>
+						<div class="caixa-conteudo">
+
+							<ul id="lista-noticias">
+								<li>
+									<a href="">
+										<img src="imagens/tecnologia.jpg" width="80">
+										<h3>Novas tecnologias!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur...</p>
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<img src="imagens/tecnologia.jpg" width="80">
+										<h3>Novas tecnologias!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur...</p>
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<img src="imagens/tecnologia.jpg" width="80">
+										<h3>Novas tecnologias!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur...</p>
+									</a>
+								</li>
+								<li>
+									<a href="">
+										<img src="imagens/tecnologia.jpg" width="80">
+										<h3>Novas tecnologias!</h3>
+										<p>Lorem ipsum dolor sit amet, consectetur...</p>
+									</a>
+								</li>
+							</ul>
+
+						</div>
+					</div>
+
+				</div>
+				
+			</div><!-- fim /conteudo -->
+
+		</div><!-- fim /container -->
+
+		<div id="container-rodape" style="clear: both;">
+			<div id="rodape">
+				&copy; Copyright 2000-2018 Notícias cidade
+			</div>
+		</div>
+
+	</body>
+
 </html>
